--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -20,8 +21,21 @@
     "sass": "^1.54.9"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.17.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.0.2",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
-    "typescript": "4.8.3"
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "8.23.1",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "12.3.0",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "ts-jest": "^29.0.1",
+    "typescript": "^4.8.3"
   }
 }
