--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/babel__core": "^7.1.19",
     "@types/jest": "^29.0.2",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
